fix signing string overflow

--- a/src/Signin/sign.less
+++ b/src/Signin/sign.less
@@ -41,16 +41,16 @@
 
 			.col-3 {
 				float: left;
-				width: 30%;
+				width: 35%;
 				padding: 0% 3%;
 				box-sizing: border-box;
 				text-align: right;
-				font-size: 2em;
+				font-size: 1.8em;
 			}
 
 			.col {
 				float: left;
-				width: 70%;
+				width: 65%;
 				box-sizing: border-box;
 				text-align: left;
 				padding: 0% 1%;
